[gd_scene load_steps=10 format=3 uid="uid://da1e00gk7127f"]

[ext_resource type="Theme" uid="uid://cvvfj8ffpw3np" path="res://addons/godot_rulebook/editor/theme.tres" id="1_rnmyx"]
[ext_resource type="Script" path="res://addons/godot_rulebook/editor/core/editor_rule.gd" id="1_tbsl0"]
[ext_resource type="Texture2D" uid="uid://fdiqucphdxpf" path="res://addons/godot_rulebook/editor/assets/icons/fold_down_arrow.svg" id="2_d8iix"]
[ext_resource type="Texture2D" uid="uid://d2bgfnbm5a34m" path="res://addons/godot_rulebook/editor/assets/icons/folded_right_arrow.svg" id="3_5ps6m"]
[ext_resource type="Texture2D" uid="uid://b1v7jayblixhl" path="res://addons/godot_rulebook/editor/assets/icons/remove.svg" id="4_gohyw"]
[ext_resource type="PackedScene" uid="uid://c8hvagjekmndj" path="res://addons/godot_rulebook/editor/other/editable_name.tscn" id="4_uwxul"]
[ext_resource type="Script" path="res://addons/godot_rulebook/editor/core/resolution_path.gd" id="5_c54nv"]
[ext_resource type="Texture2D" uid="uid://cuwnd5nylkfs3" path="res://addons/godot_rulebook/editor/assets/icons/file_browse.svg" id="6_q10ke"]
[ext_resource type="Script" path="res://addons/godot_rulebook/editor/other/browse_button.gd" id="7_5w8ul"]

[node name="Rule Name" type="PanelContainer"]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -15.5
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_rnmyx")
script = ExtResource("1_tbsl0")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Header" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="FoldButton" type="CheckBox" parent="VBoxContainer/Header"]
layout_mode = 2
size_flags_stretch_ratio = 15.0
theme_override_icons/checked = ExtResource("2_d8iix")
theme_override_icons/unchecked = ExtResource("3_5ps6m")
button_pressed = true
flat = true

[node name="RuleName" parent="VBoxContainer/Header" instance=ExtResource("4_uwxul")]
unique_name_in_owner = true
layout_mode = 2
editable_name = "Rule name"

[node name="RuleTypeList" type="ItemList" parent="VBoxContainer/Header"]
unique_name_in_owner = true
custom_minimum_size = Vector2(410, 0)
layout_mode = 2
allow_reselect = true
allow_search = false
auto_height = true
item_count = 3
max_columns = 3
same_column_width = true
fixed_column_width = 80
icon_mode = 0
item_0/text = "AMEND"
item_1/text = "RESOLVE"
item_2/text = "CHAIN"

[node name="DeleteRule" type="Button" parent="VBoxContainer/Header"]
layout_mode = 2
icon = ExtResource("4_gohyw")

[node name="ContentsMargin" type="MarginContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_bottom = 30

[node name="Contents" type="VBoxContainer" parent="VBoxContainer/ContentsMargin"]
layout_mode = 2

[node name="If" type="Label" parent="VBoxContainer/ContentsMargin/Contents"]
layout_mode = 2
text = "IF:"

[node name="PredicatesMargin" type="MarginContainer" parent="VBoxContainer/ContentsMargin/Contents"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 20

[node name="Predicates" type="VBoxContainer" parent="VBoxContainer/ContentsMargin/Contents/PredicatesMargin"]
unique_name_in_owner = true
layout_mode = 2

[node name="AddPredicateSection" type="VBoxContainer" parent="VBoxContainer/ContentsMargin/Contents/PredicatesMargin/Predicates"]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/ContentsMargin/Contents/PredicatesMargin/Predicates/AddPredicateSection"]
layout_mode = 2

[node name="AddPredicate" type="Button" parent="VBoxContainer/ContentsMargin/Contents/PredicatesMargin/Predicates/AddPredicateSection/HBoxContainer"]
layout_mode = 2
text = "+ Monitorable"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/ContentsMargin/Contents/PredicatesMargin/Predicates/AddPredicateSection/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Then" type="Label" parent="VBoxContainer/ContentsMargin/Contents"]
auto_translate_mode = 1
layout_mode = 2
text = "THEN:"

[node name="ResolutionMargin" type="MarginContainer" parent="VBoxContainer/ContentsMargin/Contents"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 40

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/ContentsMargin/Contents/ResolutionMargin"]
layout_mode = 2

[node name="ResolutionPath" type="LineEdit" parent="VBoxContainer/ContentsMargin/Contents/ResolutionMargin/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "*.gd"
expand_to_text_length = true
script = ExtResource("5_c54nv")

[node name="BrowseButton" type="Button" parent="VBoxContainer/ContentsMargin/Contents/ResolutionMargin/HBoxContainer"]
layout_mode = 2
icon = ExtResource("6_q10ke")
script = ExtResource("7_5w8ul")

[node name="FileDialog" type="FileDialog" parent="VBoxContainer/ContentsMargin/Contents/ResolutionMargin/HBoxContainer/BrowseButton"]
title = "Open a File"
initial_position = 2
size = Vector2i(748, 374)
ok_button_text = "Open"
file_mode = 0
filters = PackedStringArray("*.gd")

[connection signal="toggled" from="VBoxContainer/Header/FoldButton" to="." method="_on_fold_rule_button_toggled"]
[connection signal="pressed" from="VBoxContainer/Header/DeleteRule" to="." method="_on_delete_rule_pressed"]
[connection signal="pressed" from="VBoxContainer/ContentsMargin/Contents/PredicatesMargin/Predicates/AddPredicateSection/HBoxContainer/AddPredicate" to="." method="_on_add_predicate_pressed"]
[connection signal="text_submitted" from="VBoxContainer/ContentsMargin/Contents/ResolutionMargin/HBoxContainer/ResolutionPath" to="VBoxContainer/ContentsMargin/Contents/ResolutionMargin/HBoxContainer/ResolutionPath" method="_on_text_submitted"]
[connection signal="pressed" from="VBoxContainer/ContentsMargin/Contents/ResolutionMargin/HBoxContainer/BrowseButton" to="VBoxContainer/ContentsMargin/Contents/ResolutionMargin/HBoxContainer/BrowseButton" method="_on_pressed"]
[connection signal="file_selected" from="VBoxContainer/ContentsMargin/Contents/ResolutionMargin/HBoxContainer/BrowseButton/FileDialog" to="VBoxContainer/ContentsMargin/Contents/ResolutionMargin/HBoxContainer/ResolutionPath" method="_on_file_dialog_file_selected"]
